[gd_scene load_steps=2 format=3 uid="uid://33rixjiknvls"]

[ext_resource type="Script" path="res://ui/game_over_menu/game_over_menu.gd" id="1_an0mt"]

[node name="GameOverMenu" type="MarginContainer"]
process_mode = 3
custom_minimum_size = Vector2(320, 180)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_an0mt")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="Panel" type="Panel" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Game Over"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Score:"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/separation = 30

[node name="TryAgainButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Try Again"

[node name="QuitButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Quit"

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
